# test-zappa

./: .env.exemple  .gitignore  README.md  db.sqlite3  pyproject.toml  zappa_settings.json
core/: settings.py  storage_backends.py  urls.py
