[project]
name = "p2v-backend"
version = "0.1.0"
description = ""
authors = [{ name = "Maquina Web", email = "arte@maquinaweb.com.br" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "django~=5.2",
    "djangorestframework>=3.15.1,<4",
    "python-decouple~=3.8",
    "drf-nested-routers>=0.94.1,<0.95",
    "drf-spectacular>=0.27.2,<0.28",
    "django-debug-toolbar>=4.4.2,<5",
    "django-storages>=1.14.4,<2",
    "django-cors-headers>=4.4.0,<5",
    "requests>=2.32.3",
    "psycopg2-binary>=2.9.11",
    "zappa",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.uv.sources]
zappa = { git = "https://github.com/zappa/Zappa.git" }
